WFK2-825 Prevent clipping of text content.
CSS overflow rules are added to ensure that text overflows and
is visible, instead of being clipped.

--- a/kitchensink-html5-mobile/src/main/webapp/css/screen.css
+++ b/kitchensink-html5-mobile/src/main/webapp/css/screen.css
@@ -58,6 +58,9 @@ article .wrap {
     border-radius: 8px;
     /* Set padding so the edges are flush */
     padding: 1em;
+    /* Set word wrap properties to break long text into separate lines */
+    word-break: break-all;
+    white-space: normal;
 }
 
 .mobileicon {
